--- a/Sign in/sign_in.css
+++ b/Sign in/sign_in.css
@@ -12,14 +12,18 @@ body{
  height: 100vh;
  align-items: center;
  font-family: 'Gudea', sans-serif;
+ /* background:linear-gradient(to right, white,rgb(111, 112, 114)); */
+ background: url('/Assets/img/bg-5.jpg');
+ background-size: cover;
 }
 
 
 .container{
  width:320px;
  height: 400px;
- background-color: #34363E;
+ background-color: #34363e;
  color: white;
+ box-shadow: 2px 2px 5px rgba(0,0,0,0.5);
  border-radius: 3px;
 }
 
@@ -45,7 +49,6 @@ body{
 
 .container input{
  width: 100%;
- cursor: pointer;
  color: white;
  box-shadow: 1px 1px solid rgba(179, 175, 175, 0.5);
 }
@@ -74,7 +77,6 @@ body{
  border: 1px solid white;
  color: white;
  text-transform: capitalize;
- cursor: pointer;
 }
 
 
