--- a/Sing up/sign_up.css
+++ b/Sing up/sign_up.css
@@ -136,7 +136,7 @@ input[type = "date"]::-webkit-inner-spin-button { display: none; }
   font-size: 1rem;
   margin-bottom: 2.7rem;
   line-height: 1.2rem;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   /* background: #27AE60; */
   background: #34363e;
  }
