--- a/Sing up/sign_up.css
+++ b/Sing up/sign_up.css
@@ -220,6 +220,47 @@ input[type = "date"]::-webkit-inner-spin-button { display: none; }
    color: #34363E;
  }
 
+.skills{
+  display: unset;
+  width: 100%;
+}
+
+.skills h3{
+  display: block;
+  color: rgba(179, 175, 175, 0.5);
+  padding: 10px;
+  font-weight: 400;
+}
+
+.skills .skill-select{
+  /* display: flex; */
+  margin: 10px;
+}
+
+.skills .skill-select input{
+  width: 20px;
+  margin:10px 0;
+}
+
+.skills .skill-select input[type = "checkbox"]{
+  font-size: 2rem;
+}
+
+.skills .skill-select label{
+  color: rgba(179, 175, 175, 0.5);
+  line-height: 1.6rem;
+  /* padding-bottom: 5px; */
+  /* border: 1px solid white; */
+}
+
+#other-skills{
+  background-color: rgba(253, 252, 252, 0.74);
+  width: 100%;
+  height: 100px;
+  font-size: 1.1rem;
+  display: none;
+}
+
 @media (max-width : 600px){
  .container{
   width: 90vw;
