--- a/Sign in/sign_in.css
+++ b/Sign in/sign_in.css
@@ -14,6 +14,7 @@ body{
 nav{
  font-family: 'Kanit', sans-serif;
  font-weight: 400;
+ z-index: 100;
  background-color: #fffdf9;
  color: white;
 }
@@ -158,4 +159,24 @@ nav{
   margin: 1rem;
   height: auto;
  }
+ .nav-item .nav-link{
+ /* margin: 0 15px; */
+ display: block;
+ width: 100%;
+ padding: 1rem 1rem;
+}
+
+.fa-sign-in{
+ padding: 10px;
+}
+
+.navbar-header{
+ margin: 0 0 0 2rem;
+ width: 250px;
+}
+
+.navbar-header h2{
+ margin: 0;
+ font-size: 0.9rem;
+}
 }
