--- a/index.css
+++ b/index.css
@@ -61,10 +61,10 @@ img{
 @media (max-width:756px){
  
 .nav-item .nav-link{
- margin: 0 15px;
+ /* margin: 0 15px; */
  display: block;
  width: 100%;
- padding: 1rem 2rem;
+ padding: 1rem 1rem;
 }
 
 .fa-sign-in{
