--- a/Sign in/sign_in.css
+++ b/Sign in/sign_in.css
@@ -99,8 +99,9 @@ nav{
 }
 
 .cont input[type = "text"],input[type = "password"]{
- background: white;
+ /* background: white; */
  padding: 1.2rem 0;
+ color: #34363E;
  /* font-size: 1rem; */
  /* outline: 1px solid white; */
  border: none;
