--- a/Sign in/sign_in.css
+++ b/Sign in/sign_in.css
@@ -156,6 +156,14 @@ nav{
  color: black;
 }
 
+footer{
+ position: absolute;
+ bottom: 0;
+ text-align: center;
+ width: 100%;
+ font-size: .8rem;
+}
+
 @media (max-width : 600px){
  .cont{
   width: 100%;
