--- a/index.css
+++ b/index.css
@@ -29,9 +29,14 @@ nav{
  margin: 0 15px;
 }
 
-.fa-sign-in{
+.fa-sign-in,.fa-caret-down{
  padding: 0 10px;
  color: #fb5b5a;
+}
+
+.dropdown-item:hover{
+ background-color: #fb5b5a;
+ color: white;
 }
 
 .nav-link{
@@ -44,10 +49,16 @@ nav{
  color: white;
 }
 
-.nav-item:hover,.nav-link:hover,.nav-item:hover .fa-sign-in{
+.nav-item:hover,.nav-link:hover,.nav-item:hover{
  background-color: #fb5b5a;
  color: white;
 }
+
+.nav-item:hover #drop,.nav-item:hover .fa-caret-down{
+ background-color: none;
+ color: white;
+}
+
 
 .nav-button{
  border-radius: 3px;
@@ -57,6 +68,10 @@ nav{
 img{
  max-width: 100%;
 }
+
+/* .drop:hover{
+ background-color: white;
+} */
 
 @media (max-width:756px){
  
