--- a/College Login/Sing up/sign_up.css
+++ b/College Login/Sing up/sign_up.css
@@ -140,107 +140,13 @@ span{
  border-bottom: 1px solid rgba(248, 231, 231, 0.1);
 }
 
-
-input[type = "number" ]::-webkit-inner-spin-button{
-  -webkit-appearance: none;
-}
-
-input[type = "date"]::-webkit-clear-button{
-  display: none;
-}
-
-.cont input[type = "date"]{
- color: rgba(253, 252, 252, 0.74);
-}
-
-.cont input[type="date"]::-webkit-calendar-picker-indicator {
-  font-size: 15px;
-  color: white;
-  background-color: #34363E;
-  padding: 5px;
-}
-input[type = "date"]::-webkit-inner-spin-button { display: none; }
-
-
-/* To style the date input  */
-/* ::-webkit-datetime-edit-text { padding: 0 2rem; } */
-/* ::-webkit-datetime-edit-month-field { text-transform: uppercase; } */
-/* ::-webkit-datetime-edit-day-field { text-transform: uppercase; } */
-/* ::-webkit-datetime-edit-year-field { text-transform: uppercase; } */
-
 .cont button{
- width: 100px;
- text-align: center;
- cursor: pointer;
- height: 30px;
- position: relative;
- right: 1rem;
- bottom: 1rem;
- width: 120px;
- font-weight: 700;
- margin: 2rem 1.4rem 1.5rem 7rem;
- font-size: 0.9rem;
+  /* position: relative; */
+ margin: 2rem 1.4rem 1.5rem 5rem;
  border-radius: 20px;
- outline: none;
- background: none;
- border: 1px solid white;
- color: white;
- text-transform: capitalize;
+ width: 130px;
 }
 
-.cont button:hover,.cont button:focus{
- background-color: white;
- color: #34363e;
-}
-
- a{
-   color: white;
-   text-decoration: none;
- }
- button:hover a{
-   color: #34363E;
- }
-
-.skills{
-  display: unset;
-  width: 100%;
-}
-
-.skills h3{
-  display: block;
-  color: #34363E;
-  padding: 10px;
-  font-weight: 400;
-}
-
-.skills .skill-select{
-  /* display: flex; */
-  margin: 10px;
-}
-
-.skills .skill-select input{
-  width: 20px;
-  margin:10px 0;
-}
-
-.skills .skill-select input[type = "checkbox"]{
-  font-size: 2rem;
-}
-
-.skills .skill-select label{
-  color: rgb(146, 145, 145);
-  line-height: 1.6rem;
-  /* padding-bottom: 5px; */
-  /* border: 1px solid white; */
-}
-
-#other-skills{
-  background-color: rgba(253, 252, 252, 0.74);
-  width: 100%;
-  height: 100px;
-  font-size: 1.1rem;
-  display: none;
-}
 
 @media (max-width : 600px){
  .cont{
