--- a/Sing up/sign_up.css
+++ b/Sing up/sign_up.css
@@ -168,32 +168,13 @@ input[type = "date"]::-webkit-inner-spin-button { display: none; }
 /* ::-webkit-datetime-edit-day-field { text-transform: uppercase; } */
 /* ::-webkit-datetime-edit-year-field { text-transform: uppercase; } */
 
-.cont button{
- width: 100px;
- text-align: center;
- cursor: pointer;
- height: 30px;
- position: relative;
- right: 1rem;
- bottom: 1rem;
- width: 120px;
- font-weight: 700;
- margin: 2rem 1.4rem 1.5rem 7rem;
- font-size: 0.9rem;
+button{
+ margin: 2rem 1.4rem 1.5rem 5rem;
  border-radius: 20px;
- outline: none;
- background: none;
- border: 1px solid white;
- color: white;
- text-transform: capitalize;
+ width: 130px;
 }
 
-.cont button:hover,.cont button:focus{
- background-color: white;
- color: #34363e;
-}
-
- a{
+a{
    color: white;
    text-decoration: none;
  }
